--- a/index.html
+++ b/index.html
@@ -34,4 +34,10 @@
       </div>
     </div>
   </body>
+  <script
+  defer
+  data-domain="abhinavthedev.github.io"
+  src="https://getanalyzr.vercel.app/tracking-script.js"
+>
+  </script>
 </html>
