--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="style.css" />
+    <script defer data-domain="abhinavthedev.github.io" src="https://getanalyzr.vercel.app/tracking-script.js"></script>
   </head>
   <body>
     <div class="console">
@@ -34,10 +35,4 @@
       </div>
     </div>
   </body>
-  <script
-  defer
-  data-domain="abhinavthedev.github.io"
-  src="https://getanalyzr.vercel.app/tracking-script.js"
->
-  </script>
 </html>
